Including FIGO score seems to drastically improve Cox PH model.

--- a/data_retrieval/TCGA_get_RNA_data.ipynb
+++ b/data_retrieval/TCGA_get_RNA_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -143,12 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
-    "projects <- c(\"TCGA-CESC\", \"TCGA-OV\", \"TCGA-UCS\", \"TCGA-UCEC\", \"TCGA-BRCA\", \"TCGA-COAD\", \"TCGA-LGG\")\n",
+    "projects <- c(\n",
+    "    \"TCGA-CESC\", \"TCGA-OV\", \"TCGA-UCS\", \"TCGA-UCEC\", \"TCGA-BRCA\", \"TCGA-COAD\", \"TCGA-LGG\", \"TCGA-TGCT\", \"TCGA-PRAD\"\n",
+    ")\n",
     "project_paths <- unlist(map(projects, function(prj) paste0(dirs$data_dir, \"/\", prj)))\n",
     "biolinks_dir <- \"tcga_biolinks_downloads\"\n",
     "RSE_objects_dir <- \"saved_RSE_objects\"\n",
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,6 +1216,406 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------\n",
+      "o GDCquery: Searching in GDC database\n",
+      "--------------------------------------\n",
+      "Genome of reference: hg38\n",
+      "--------------------------------------------\n",
+      "oo Accessing GDC. This might take a while...\n",
+      "--------------------------------------------\n",
+      "ooo Project: TCGA-TGCT\n",
+      "--------------------\n",
+      "oo Filtering results\n",
+      "--------------------\n",
+      "ooo By data.type\n",
+      "ooo By workflow.type\n",
+      "----------------\n",
+      "oo Checking data\n",
+      "----------------\n",
+      "ooo Check if there are duplicated cases\n",
+      "ooo Check if there results for the query\n",
+      "-------------------\n",
+      "o Preparing output\n",
+      "-------------------\n",
+      "Downloading data for project TCGA-TGCT\n",
+      "GDCdownload will download 156 files. A total of 39.5905 MB\n",
+      "Downloading chunk 1 of 16 (10 files, size = 2.537164 MB) as Thu_Sep_17_15_21_06_2020_0.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB     "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 2 of 16 (10 files, size = 2.537302 MB) as Thu_Sep_17_15_21_06_2020_1.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 3 of 16 (10 files, size = 2.536912 MB) as Thu_Sep_17_15_21_06_2020_2.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 4 of 16 (10 files, size = 2.547079 MB) as Thu_Sep_17_15_21_06_2020_3.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 5 of 16 (10 files, size = 2.536 MB) as Thu_Sep_17_15_21_06_2020_4.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 6 of 16 (10 files, size = 2.544117 MB) as Thu_Sep_17_15_21_06_2020_5.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 7 of 16 (10 files, size = 2.534699 MB) as Thu_Sep_17_15_21_06_2020_6.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 8 of 16 (10 files, size = 2.548464 MB) as Thu_Sep_17_15_21_06_2020_7.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 9 of 16 (10 files, size = 2.52637 MB) as Thu_Sep_17_15_21_06_2020_8.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 10 of 16 (10 files, size = 2.538284 MB) as Thu_Sep_17_15_21_06_2020_9.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 11 of 16 (10 files, size = 2.53732 MB) as Thu_Sep_17_15_21_06_2020_10.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 12 of 16 (10 files, size = 2.546517 MB) as Thu_Sep_17_15_21_06_2020_11.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 13 of 16 (10 files, size = 2.523885 MB) as Thu_Sep_17_15_21_06_2020_12.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 14 of 16 (10 files, size = 2.543499 MB) as Thu_Sep_17_15_21_06_2020_13.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB     "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 15 of 16 (10 files, size = 2.534547 MB) as Thu_Sep_17_15_21_06_2020_14.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 2.5 MB       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading chunk 16 of 16 (6 files, size = 1.518341 MB) as Thu_Sep_17_15_21_06_2020_15.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|====================================================|100%                      Completed after 14 s \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Starting to add information to samples\n",
+      " => Add clinical information to samples\n",
+      "Add FFPE information. More information at: \n",
+      "=> https://cancergenome.nih.gov/cancersselected/biospeccriteria \n",
+      "=> http://gdac.broadinstitute.org/runs/sampleReports/latest/FPPP_FFPE_Cases.html\n",
+      " => Adding subtype information to samples\n",
+      "Accessing www.ensembl.org to get gene information\n",
+      "Downloading genome information (try:0) Using: Human genes (GRCh38.p13)\n",
+      "Warning message:\n",
+      "“`select_()` is deprecated as of dplyr 0.7.0.\n",
+      "Please use `select()` instead.\n",
+      "This warning is displayed once every 8 hours.\n",
+      "Call `lifecycle::last_warnings()` to see where this warning was generated.”Warning message:\n",
+      "“`filter_()` is deprecated as of dplyr 0.7.0.\n",
+      "Please use `filter()` instead.\n",
+      "See vignette('programming') for more help\n",
+      "This warning is displayed once every 8 hours.\n",
+      "Call `lifecycle::last_warnings()` to see where this warning was generated.”Cache found\n",
+      "From the 60483 genes we couldn't map 4026\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "class: RangedSummarizedExperiment \n",
+       "dim: 56457 156 \n",
+       "metadata(1): data_release\n",
+       "assays(1): HTSeq - Counts\n",
+       "rownames(56457): ENSG00000000003 ENSG00000000005 ... ENSG00000281912\n",
+       "  ENSG00000281920\n",
+       "rowData names(3): ensembl_gene_id external_gene_name\n",
+       "  original_ensembl_gene_id\n",
+       "colnames(156): TCGA-2G-AAFZ-01A-11R-A430-07\n",
+       "  TCGA-2G-AAF4-01A-11R-A430-07 ... TCGA-XY-A9T9-01A-11R-A431-07\n",
+       "  TCGA-2G-AAL5-01A-11R-A430-07\n",
+       "colData names(72): sample patient ... days_to_death is_ffpe"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "proj_idx <- 8\n",
+    "q <- rna_seq_query(projects[proj_idx])\n",
+    "GDCdownload(q, method = \"api\", directory = TCGA_dest_dir, files.per.chunk = 10)\n",
+    "data <- GDCprepare(q, directory = TCGA_dest_dir)\n",
+    "data\n",
+    "saveHDF5SummarizedExperiment(data, dir = RSE_objects_dest_dir, prefix = paste0(projects[proj_idx], \"_RNA_\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------\n",
+      "o GDCquery: Searching in GDC database\n",
+      "--------------------------------------\n",
+      "Genome of reference: hg38\n",
+      "--------------------------------------------\n",
+      "oo Accessing GDC. This might take a while...\n",
+      "--------------------------------------------\n",
+      "ooo Project: TCGA-PRAD\n",
+      "--------------------\n",
+      "oo Filtering results\n",
+      "--------------------\n",
+      "ooo By data.type\n",
+      "ooo By workflow.type\n",
+      "----------------\n",
+      "oo Checking data\n",
+      "----------------\n",
+      "ooo Check if there are duplicated cases\n",
+      "ooo Check if there results for the query\n",
+      "-------------------\n",
+      "o Preparing output\n",
+      "-------------------\n",
+      "Downloading data for project TCGA-PRAD\n",
+      "Of the 551 files for download 550 already exist.\n",
+      "We will download only those that are missing ones.\n",
+      "GDCdownload will download: 252.892 KB\n",
+      "Downloading chunk 1 of 1 (1 files, size = 252.892 KB) as ba57cbaf-b52c-402b-b72a-f0df0e086369.htseq.counts.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  |======================================================================| 100%\n",
+      "|====================================================|100%                      Completed after 50 s \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Starting to add information to samples\n",
+      " => Add clinical information to samples\n",
+      "Add FFPE information. More information at: \n",
+      "=> https://cancergenome.nih.gov/cancersselected/biospeccriteria \n",
+      "=> http://gdac.broadinstitute.org/runs/sampleReports/latest/FPPP_FFPE_Cases.html\n",
+      " => Adding subtype information to samples\n",
+      "prad subtype information from:doi:10.1016/j.cell.2015.10.025\n",
+      "Accessing www.ensembl.org to get gene information\n",
+      "Downloading genome information (try:0) Using: Human genes (GRCh38.p13)\n",
+      "Cache found\n",
+      "From the 60483 genes we couldn't map 4026\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "class: RangedSummarizedExperiment \n",
+       "dim: 56457 551 \n",
+       "metadata(1): data_release\n",
+       "assays(1): HTSeq - Counts\n",
+       "rownames(56457): ENSG00000000003 ENSG00000000005 ... ENSG00000281912\n",
+       "  ENSG00000281920\n",
+       "rowData names(3): ensembl_gene_id external_gene_name\n",
+       "  original_ensembl_gene_id\n",
+       "colnames(551): TCGA-HC-A6AN-01A-11R-A30B-07\n",
+       "  TCGA-G9-6498-01A-12R-A311-07 ... TCGA-CH-5772-01A-11R-1580-07\n",
+       "  TCGA-ZG-A9L2-01A-31R-A41O-07\n",
+       "colData names(152): sample patient ... subtype_AR_V7_ratio\n",
+       "  subtype_AR_V7_presence"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "proj_idx <- 9\n",
+    "q <- rna_seq_query(projects[proj_idx])\n",
+    "GDCdownload(q, method = \"api\", directory = TCGA_dest_dir, files.per.chunk = 10)\n",
+    "data <- GDCprepare(q, directory = TCGA_dest_dir)\n",
+    "data\n",
+    "saveHDF5SummarizedExperiment(data, dir = RSE_objects_dest_dir, prefix = paste0(projects[proj_idx], \"_RNA_\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1224,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
