--- a/preprocessing/TCGA_exploratory_data_prep.ipynb
+++ b/preprocessing/TCGA_exploratory_data_prep.ipynb
@@ -148,7 +148,8 @@
    "source": [
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "gyn_projects <- c(\"TCGA-CESC\", \"TCGA-UCS\", \"TCGA-UCEC\", \"TCGA-OV\")\n",
-    "nongyn_projects <- c(\"TCGA-BRCA\", \"TCGA-COAD\", \"TCGA-LGG\")"
+    "# nongyn_projects <- c(\"TCGA-BRCA\", \"TCGA-COAD\", \"TCGA-LGG\")\n",
+    "nongyn_projects <- c(\"TCGA-BRCA\", \"TCGA-COAD\", \"TCGA-TGCT\", \"TCGA-PRAD\")"
    ]
   },
   {
@@ -164,7 +165,7 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-CESC_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_counts.tsv'</li></ol>\n"
+       "<ol class=list-inline><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-CESC_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-TGCT_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-PRAD_counts.tsv'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
@@ -174,7 +175,8 @@
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-OV\\_counts.tsv'\n",
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-BRCA\\_counts.tsv'\n",
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-COAD\\_counts.tsv'\n",
-       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-LGG\\_counts.tsv'\n",
+       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-TGCT\\_counts.tsv'\n",
+       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-PRAD\\_counts.tsv'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
@@ -184,7 +186,8 @@
        "4. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_counts.tsv'\n",
        "5. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_counts.tsv'\n",
        "6. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_counts.tsv'\n",
-       "7. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_counts.tsv'\n",
+       "7. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-TGCT_counts.tsv'\n",
+       "8. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-PRAD_counts.tsv'\n",
        "\n",
        "\n"
       ],
@@ -195,7 +198,8 @@
        "[4] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_counts.tsv\"  \n",
        "[5] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_counts.tsv\"\n",
        "[6] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_counts.tsv\"\n",
-       "[7] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_counts.tsv\" "
+       "[7] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-TGCT_counts.tsv\"\n",
+       "[8] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-PRAD_counts.tsv\""
       ]
      },
      "metadata": {},
@@ -209,7 +213,7 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-CESC_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_coldata.tsv'</li></ol>\n"
+       "<ol class=list-inline><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-CESC_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-TGCT_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-PRAD_coldata.tsv'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
@@ -219,7 +223,8 @@
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-OV\\_coldata.tsv'\n",
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-BRCA\\_coldata.tsv'\n",
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-COAD\\_coldata.tsv'\n",
-       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-LGG\\_coldata.tsv'\n",
+       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-TGCT\\_coldata.tsv'\n",
+       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-PRAD\\_coldata.tsv'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
@@ -229,7 +234,8 @@
        "4. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_coldata.tsv'\n",
        "5. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_coldata.tsv'\n",
        "6. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_coldata.tsv'\n",
-       "7. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_coldata.tsv'\n",
+       "7. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-TGCT_coldata.tsv'\n",
+       "8. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-PRAD_coldata.tsv'\n",
        "\n",
        "\n"
       ],
@@ -240,7 +246,8 @@
        "[4] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_coldata.tsv\"  \n",
        "[5] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_coldata.tsv\"\n",
        "[6] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_coldata.tsv\"\n",
-       "[7] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_coldata.tsv\" "
+       "[7] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-TGCT_coldata.tsv\"\n",
+       "[8] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-PRAD_coldata.tsv\""
       ]
      },
      "metadata": {},
@@ -297,12 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -357,6 +359,19 @@
       "  external_gene_name = col_character()\n",
       ")\n",
       "See spec(...) for full column specifications.\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  ensembl_gene_id = col_character(),\n",
+      "  external_gene_name = col_character()\n",
+      ")\n",
+      "See spec(...) for full column specifications.\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  sample_name = col_character(),\n",
+      "  condition = col_character(),\n",
+      "  project = col_character()\n",
+      ")\n",
       "Parsed with column specification:\n",
       "cols(\n",
       "  sample_name = col_character(),\n",
@@ -488,16 +503,16 @@
     {
      "data": {
       "text/html": [
-       "34478"
+       "34224"
       ],
       "text/latex": [
-       "34478"
+       "34224"
       ],
       "text/markdown": [
-       "34478"
+       "34224"
       ],
       "text/plain": [
-       "[1] 34478"
+       "[1] 34224"
       ]
      },
      "metadata": {},
