Cox PH fully updated.

--- a/ML_analysis/coxph_feature_selection.ipynb
+++ b/ML_analysis/coxph_feature_selection.ipynb
@@ -39,7 +39,7 @@
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "projects <- c(\"TCGA-CESC\", \"TCGA-UCS\", \"TCGA-UCEC\", \"TCGA-OV\")\n",
     "unified_dsets <- c(\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\")\n",
-    "matrisome_list <- paste0(dirs$data_dir, \"/matrisome/matrisome_hs_masterlist.tsv\")"
+    "matrisome_path <- paste0(dirs$data_dir, \"/matrisome/matrisome_hs_masterlist.tsv\")"
    ]
   },
   {
@@ -52,6 +52,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  Division = col_character(),\n",
+      "  Category = col_character(),\n",
+      "  `Gene Symbol` = col_character(),\n",
+      "  `Gene Name` = col_character(),\n",
+      "  Synonyms = col_character(),\n",
+      "  HGNC_IDs = col_double(),\n",
+      "  `HGNC_IDs Links` = col_double(),\n",
+      "  UniProt_IDs = col_character(),\n",
+      "  Refseq_IDs = col_character(),\n",
+      "  Orthology = col_character(),\n",
+      "  Notes = col_character()\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrisome_df <- load_matrisome_df(matrisome_path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,7 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)\n",
+    "covariate_cols_no_figo <- c(\"age_at_diagnosis\", \"bmi\", \"race\", \"ethnicity\")\n",
+    "covariate_cols <- c(\"figo_stage\", covariate_cols_no_figo)\n",
+    "dep_cols <- c(\"vital_status\", \"survival_time\")\n",
+    "figo_map_df <- tibble(\n",
+    "    roman_num = c(\"I\", \"II\", \"III\", \"IV\"),\n",
+    "    figo_code = c('1', '2', '3', '4')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,64 +133,18 @@
     }
    ],
    "source": [
-    "# event codes defined according to survival::Surv() docs\n",
-    "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)\n",
-    "covariate_cols <- c(\"age_at_diagnosis\", \"bmi\", \"race\", \"ethnicity\")\n",
-    "dep_cols <- c(\"vital_status\", \"survival_time\")\n",
-    "\n",
-    "survival_df <- load_survival_df(paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/survival_data.tsv\"), event_code)\n",
-    "\n",
+    "# survival_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/survival_data.tsv\"))\n",
+    "survival_path <- paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/survival_data.tsv\")\n",
+    "survival_df <- load_survival_df(survival_path, event_code)\n",
     "filtered_survival_df <- survival_df %>%\n",
     "    dplyr::select(one_of(c(\"sample_name\", dep_cols, covariate_cols))) %>%\n",
-    "    dplyr::filter(rowSums(is.na(.)) == 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "217"
-      ],
-      "text/latex": [
-       "217"
-      ],
-      "text/markdown": [
-       "217"
-      ],
-      "text/plain": [
-       "[1] 217"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "0.837837837837838"
-      ],
-      "text/latex": [
-       "0.837837837837838"
-      ],
-      "text/markdown": [
-       "0.837837837837838"
-      ],
-      "text/plain": [
-       "[1] 0.8378378"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "nrow(filtered_survival_df)\n",
-    "# proportion of samples included in final data set\n",
-    "nrow(filtered_survival_df) / nrow(survival_df)"
+    "    dplyr::filter(rowSums(is.na(.)) == 0) %>%\n",
+    "    dplyr::mutate(\n",
+    "        figo_rn = str_extract(figo_stage, \"IV|III|II|I\")\n",
+    "    ) %>%\n",
+    "    dplyr::inner_join(figo_map_df, by = c(\"figo_rn\" = \"roman_num\")) %>%\n",
+    "    dplyr::select(-c(figo_rn, figo_stage)) %>%\n",
+    "    dplyr::rename(figo_stage = figo_code)"
    ]
   },
   {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,69 +233,97 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Cox PH model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genes_of_interest <- colnames(joined_survival_counts_df %>% dplyr::select(-colnames(filtered_survival_df)))\n",
-    "null_model_formula_chr <- paste0(\n",
-    "    \"Surv(survival_time, vital_status) ~ \",\n",
-    "    paste(covariate_cols, collapse = \" + \")\n",
-    ")\n",
-    "survival_fit_null <- coxph(\n",
-    "    as.formula(null_model_formula_chr),\n",
-    "    data = joined_survival_counts_df,\n",
-    "    singular.ok = TRUE\n",
-    ")\n",
-    "\n",
-    "gene_pvals <- c()\n",
-    "gene_coeffs <- c()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  10 ; coefficient may be infinite. ”"
-     ]
+     "data": {
+      "text/plain": [
+       "Call:\n",
+       "coxph(formula = as.formula(null_model_formula_chr), data = joined_survival_counts_df, \n",
+       "    singular.ok = TRUE)\n",
+       "\n",
+       "  n= 216, number of events= 48 \n",
+       "\n",
+       "                                                    coef  exp(coef)   se(coef)\n",
+       "figo_stage2                                   -5.061e-01  6.028e-01  4.867e-01\n",
+       "figo_stage3                                    4.101e-01  1.507e+00  4.485e-01\n",
+       "figo_stage4                                    1.741e+00  5.701e+00  4.125e-01\n",
+       "age_at_diagnosis                               4.746e-05  1.000e+00  3.195e-05\n",
+       "bmi                                           -3.198e-02  9.685e-01  2.561e-02\n",
+       "raceasian                                     -1.455e+00  2.334e-01  1.625e+00\n",
+       "raceblack or african american                 -1.197e+00  3.021e-01  1.480e+00\n",
+       "racenative hawaiian or other pacific islander         NA         NA  0.000e+00\n",
+       "racenot reported                              -1.660e+00  1.901e-01  1.516e+00\n",
+       "racewhite                                     -1.250e+00  2.866e-01  1.442e+00\n",
+       "ethnicitynot hispanic or latino                1.496e-01  1.161e+00  1.040e+00\n",
+       "ethnicitynot reported                          2.249e-01  1.252e+00  1.056e+00\n",
+       "                                                   z Pr(>|z|)    \n",
+       "figo_stage2                                   -1.040    0.298    \n",
+       "figo_stage3                                    0.914    0.361    \n",
+       "figo_stage4                                    4.220 2.44e-05 ***\n",
+       "age_at_diagnosis                               1.486    0.137    \n",
+       "bmi                                           -1.249    0.212    \n",
+       "raceasian                                     -0.895    0.371    \n",
+       "raceblack or african american                 -0.809    0.419    \n",
+       "racenative hawaiian or other pacific islander     NA       NA    \n",
+       "racenot reported                              -1.095    0.274    \n",
+       "racewhite                                     -0.867    0.386    \n",
+       "ethnicitynot hispanic or latino                0.144    0.886    \n",
+       "ethnicitynot reported                          0.213    0.831    \n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "                                              exp(coef) exp(-coef) lower .95\n",
+       "figo_stage2                                      0.6028     1.6589  0.232210\n",
+       "figo_stage3                                      1.5069     0.6636  0.625689\n",
+       "figo_stage4                                      5.7010     0.1754  2.540027\n",
+       "age_at_diagnosis                                 1.0000     1.0000  0.999985\n",
+       "bmi                                              0.9685     1.0325  0.921103\n",
+       "raceasian                                        0.2334     4.2840  0.009650\n",
+       "raceblack or african american                    0.3021     3.3099  0.016598\n",
+       "racenative hawaiian or other pacific islander        NA         NA        NA\n",
+       "racenot reported                                 0.1901     5.2593  0.009736\n",
+       "racewhite                                        0.2866     3.4890  0.016991\n",
+       "ethnicitynot hispanic or latino                  1.1614     0.8611  0.151231\n",
+       "ethnicitynot reported                            1.2522     0.7986  0.158153\n",
+       "                                              upper .95\n",
+       "figo_stage2                                       1.565\n",
+       "figo_stage3                                       3.629\n",
+       "figo_stage4                                      12.796\n",
+       "age_at_diagnosis                                  1.000\n",
+       "bmi                                               1.018\n",
+       "raceasian                                         5.646\n",
+       "raceblack or african american                     5.499\n",
+       "racenative hawaiian or other pacific islander        NA\n",
+       "racenot reported                                  3.713\n",
+       "racewhite                                         4.835\n",
+       "ethnicitynot hispanic or latino                   8.919\n",
+       "ethnicitynot reported                             9.915\n",
+       "\n",
+       "Concordance= 0.736  (se = 0.044 )\n",
+       "Likelihood ratio test= 36.87  on 11 df,   p=1e-04\n",
+       "Wald test            = 45.15  on 11 df,   p=5e-06\n",
+       "Score (logrank) test = 61.25  on 11 df,   p=5e-09\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "for (g in genes_of_interest) {\n",
-    "    gene_model_formula_chr <- paste0(null_model_formula_chr, \" + \", g)\n",
-    "    survival_fit_gene <- coxph(\n",
-    "        as.formula(gene_model_formula_chr),\n",
-    "        data = joined_survival_counts_df,\n",
-    "        singular.ok = TRUE\n",
-    "    )\n",
-    "    anova_res <- anova(survival_fit_null, survival_fit_gene, test = \"LRT\")\n",
-    "    gene_pvals <- c(gene_pvals, anova_res[[\"P(>|Chi|)\"]][2])\n",
-    "    gene_coeffs <- c(gene_coeffs, survival_fit_gene$coefficients[[g]])\n",
-    "}"
+    "null_model_formula_chr <- paste0(\n",
+    "    \"Surv(survival_time, vital_status) ~ \",\n",
+    "    paste0(covariate_cols, collapse = \" + \")\n",
+    "#     paste0(covariate_cols_no_figo, collapse = \" + \")\n",
+    ")\n",
+    "cox_fit_null <- coxph(\n",
+    "    as.formula(null_model_formula_chr),\n",
+    "    data = joined_survival_counts_df,\n",
+    "    singular.ok = TRUE\n",
+    ")\n",
+    "summary(cox_fit_null)"
    ]
   },
   {
@@ -304,24 +332,47 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "120"
-      ],
-      "text/latex": [
-       "120"
-      ],
-      "text/markdown": [
-       "120"
-      ],
-      "text/plain": [
-       "[1] 120"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  13 ; coefficient may be infinite. ”"
+     ]
     }
    ],
+   "source": [
+    "genes_of_interest <- colnames(joined_survival_counts_df %>% dplyr::select(-colnames(filtered_survival_df)))\n",
+    "gene_pvals <- c()\n",
+    "gene_coeffs <- c()\n",
+    "\n",
+    "for (g in genes_of_interest) {\n",
+    "    gene_model_formula_chr <- paste0(null_model_formula_chr, \" + \", g)\n",
+    "    cox_fit_gene <- coxph(\n",
+    "        as.formula(gene_model_formula_chr),\n",
+    "        data = joined_survival_counts_df,\n",
+    "        singular.ok = TRUE\n",
+    "    )\n",
+    "    anova_res <- anova(cox_fit_null, cox_fit_gene, test = \"LRT\")\n",
+    "    gene_pvals <- c(gene_pvals, anova_res[[\"P(>|Chi|)\"]][2])\n",
+    "    gene_coeffs <- c(gene_coeffs, cox_fit_gene$coefficients[[g]])\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Re-sub '-' for '_' now that no longer needed for formulae\n",
     "cox_regression_df <- tibble(\"geneID\" = gsub(\"_\", \"-\", genes_of_interest), \"gene_pval\" = gene_pvals, \"gene_coeff\" = gene_coeffs)\n",
@@ -332,22 +383,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "120"
+       "129"
       ],
       "text/latex": [
-       "120"
+       "129"
       ],
       "text/markdown": [
-       "120"
+       "129"
       ],
       "text/plain": [
-       "[1] 120"
+       "[1] 129"
       ]
      },
      "metadata": {},
@@ -356,16 +407,16 @@
     {
      "data": {
       "text/html": [
-       "0.119047619047619"
+       "0.12797619047619"
       ],
       "text/latex": [
-       "0.119047619047619"
+       "0.12797619047619"
       ],
       "text/markdown": [
-       "0.119047619047619"
+       "0.12797619047619"
       ],
       "text/plain": [
-       "[1] 0.1190476"
+       "[1] 0.1279762"
       ]
      },
      "metadata": {},
@@ -390,22 +441,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "88"
+       "79"
       ],
       "text/latex": [
-       "88"
+       "79"
       ],
       "text/markdown": [
-       "88"
+       "79"
       ],
       "text/plain": [
-       "[1] 88"
+       "[1] 79"
       ]
      },
      "metadata": {},
@@ -414,16 +465,16 @@
     {
      "data": {
       "text/html": [
-       "32"
+       "50"
       ],
       "text/latex": [
-       "32"
+       "50"
       ],
       "text/markdown": [
-       "32"
+       "50"
       ],
       "text/plain": [
-       "[1] 32"
+       "[1] 50"
       ]
      },
      "metadata": {},
@@ -433,11 +484,11 @@
    "source": [
     "# Genes associated with negative prognosis\n",
     "nrow(sig_cox_regression_df %>%\n",
-    "    dplyr::filter(gene_coeff > 0))\n",
+    "     dplyr::filter(gene_coeff > 0))\n",
     "\n",
     "# Genes associated with positive prognosis\n",
     "nrow(sig_cox_regression_df %>%\n",
-    "    dplyr::filter(gene_coeff < 0))"
+    "     dplyr::filter(gene_coeff < 0))"
    ]
   }
  ],
